<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.lacina.cubeeclient.fragments.RegisterSectorFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_sector_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/sector_unselected" />

        <EditText
            android:id="@+id/ed_name_sector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sector_name" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_cubees_sector"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

    </ListView>

    <Button
        android:id="@+id/btn_ok_sector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="OK" />


</LinearLayout>
