...

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#fff" />
    <ListView
        android:id="@+id/listview"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="9"
        android:footerDividersEnabled="false" />

...
